style the freakin' table

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <table class="flexible-restaurant-list">
+            <table class="flexible-restaurant-list table">
                 <h4>Restaurant List</h4>
                 <tr>
                     <th><a href="" ng-click="predicate = 'name'; reverse=false">Name</a>
